myproject/force-app/main/default/objects/Case/fields/MyBoolean__c.field-meta.xml
<CustomField>
    <fullName>MyBoolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MyBoolean</label>
    <type>Checkbox</type>
</CustomField>