myproject/force-app/main/default/objects/Case/fields/MyTextField5__c.field-meta.xml
<CustomField>
    <fullName>MyTextField5__c</fullName>
    <label>MyTextField5</label>
    <length>20</length>
    <type>Text</type>
</CustomField>