myproject/force-app/main/default/objects/Case/fields/testfield__c.field-meta.xml
<CustomField>
    <fullName>testfield__c</fullName>
    <label>testfield</label>
    <length>20</length>
    <type>Text</type>
</CustomField>